force-app/main/default/objects/API_Logs__c/API_Logs__c.object-meta.xml
<CustomObject>
    <description>Logs the request, response with Catch-E Integration</description>
    <label>API Log</label>
    <nameField>
        <label>API Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>