force-app/main/default/objects/API_Logs__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>