force-app/main/default/objects/API_Logs__c/fields/Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Log_Type__c</fullName>
    <label>Log Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transaction Log</fullName>
            </value>
            <value>
                <fullName>API Log</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>