force-app/main/default/objects/API_Logs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Service_Name__c</columns>
    <columns>Log_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Name__c</field>
        <operation>notContain</operation>
        <value>Insight</value>
    </filters>
    <label>Salesforce to Insight</label>
</ListView>