force-app/main/default/objects/API_Logs__c/listViews/All_All.listView-meta.xml
<ListView>
    <fullName>All_All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Service_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>