force-app/main/default/objects/API_Logs__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Service_Name__c</columns>
    <columns>Log_Type__c</columns>
    <columns>Related_Record_Id__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Service_Name__c</field>
        <operation>contains</operation>
        <value>Insight</value>
    </filters>
    <label>Insight to Salesforce</label>
</ListView>